# PetrolStation

./: CMakeLists.txt  Client.cpp  Client.h  Depot.cpp  Depot.h  Employee.cpp  Employee.h  FindIf.h  Money.h  PetrolStation.cpp  PetrolStation.h  PetrolStationBuilder.cpp  PetrolStationBuilder.h  PetrolStationBuilderTests.cpp  PetrolStationTests.cpp  Till.cpp  Till.h  TillList.cpp  TillList.h  main.cpp
